chore: release on push to "master" and use macos to do that

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -3,12 +3,12 @@ name: Release npm package
 on:
   push:
     branches:
-      - main
+      - master
 
 jobs:
   release:
     name: Release
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-node@v1
